added geo location

--- a/index.html
+++ b/index.html
@@ -3,58 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dashboard</title>
+    <title>Elegant Weather Dashboard</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="app-container">
         <div class="weather-dashboard">
-            <h1>Weather Dashboard</h1>
-            <div class="search-container">
-                <input type="text" id="city" placeholder="Enter city name" autocomplete="off">
-                <button onclick="getWeather()">Get Weather</button>
-                <button onclick="getWeatherByLocation()" class="location-btn">Use My Location</button>
-                <div class="toggle-container">
-                    <label for="unit-toggle">Celsius</label>
-                    <input type="checkbox" id="unit-toggle" onclick="toggleUnit()"> Fahrenheit
-                </div>
+            <!-- Search Container -->
+            <div class="input-container">
+                <input type="text" id="city" placeholder="Search for a city" autocomplete="off" class="minimal-input" aria-label="City name">
+                <button class="search-btn" onclick="getWeather()">Search</button>
+                <button class="location-btn" onclick="getWeatherByLocation()">Use My Location</button>
             </div>
 
-            <div id="loading" class="spinner" style="display: none;">Loading...</div>
+            <!-- Toggle Unit Switch -->
+            <div class="toggle-container">
+                <label for="unit-toggle" class="toggle-label">Celsius</label>
+                <input type="checkbox" id="unit-toggle" class="unit-toggle" onclick="toggleUnit()">
+                <label for="unit-toggle" class="toggle-label">Fahrenheit</label>
+            </div>
 
+            <!-- Preloader -->
+            <div id="loading" class="preloader" style="display: none;">
+                <div class="spinner"></div>
+            </div>
+
+            <!-- Weather Details -->
             <div id="weather-container" class="weather-card" style="display: none;">
-                <div class="header">
-                    <h2 id="city-name"></h2>
-                    <div class="icon-temp">
-                        <img id="weather-icon" alt="Weather Icon">
-                        <div>
-                            <p id="temperature" class="temperature"></p>
-                            <p id="feels-like" class="feels-like"></p>
-                        </div>
-                    </div>
+                <h2 id="city-name" class="city-title"></h2>
+                <div class="weather-info">
+                    <img id="weather-icon" alt="Weather Icon" class="weather-icon">
+                    <p id="temperature" class="temperature"></p>
                 </div>
-
-                <div class="details">
-                    <p id="weather"></p>
-                    <p id="humidity"></p>
-                    <p id="wind-speed"></p>
-                    <p id="sunrise"></p>
-                    <p id="sunset"></p>
-                </div>
-
-                <div class="forecast-container">
-                    <h3>5-Day Forecast</h3>
-                    <div class="forecast" id="forecast">
-                        <!-- Forecast Data Will Be Injected Here -->
-                    </div>
+                <div class="weather-details">
+                    <p id="feels-like" class="detail"></p>
+                    <p id="humidity" class="detail"></p>
+                    <p id="wind-speed" class="detail"></p>
+                    <p id="sunrise" class="detail"></p>
+                    <p id="sunset" class="detail"></p>
                 </div>
             </div>
 
+            <!-- Error Message -->
             <div id="error-message" class="error-message" style="display: none;"></div>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
